--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>ABCDE</h1>
+    <div style="margin: 10px;">
+        <input type="text" placeholder="ceshi">
+    </div>
+    
     <ul>
         <li>这是第1个</li>
         <li>这是第2个</li>
@@ -20,6 +24,10 @@
         <li>这是第10个</li>
         <li>这是第11个</li>   
     </ul>
+
+    <div id="box"></div>
+
+    <div id="app"></div>
 </body>
     <script src="/bundle.js"></script>
     <!-- <script src="index.js"></script> -->
